Update and rename game_start.html to game_s1.html

--- a/game_s1.html
+++ b/game_s1.html
@@ -39,7 +39,7 @@
   <p></p>
   <p></p>
   <p style="text-align:center;">
-    <a href="Native_Plants_Ident_Game.html" target="_self">
+    <a href="game_home.html" target="_self">
       <font color="LightSeaGreen">
       Return to Home
       </font></a></p>
