--- a/game_home.html
+++ b/game_home.html
@@ -22,15 +22,15 @@
     handy to be able to tell them to reference here.)</p>
   <p></p>
   <p style="text-align:center;">
-    <a href="NPIG_start.html" target="_self">
+    <a href="game_s1.html" target="_self">
       <font color="DarkOrange">
       Let's get started!
       </font></a><br>
-    <a href="NPIG_answers.html" target="_self">
+    <a href="game_answers.html" target="_self">
       <font color="DodgerBlue">
       I'd like to skip to the answers
       </font></a><br>
-    <a href="NPIG_contact-us.html" target="_self">
+    <a href="contact-us.html" target="_self">
       <font color="MediumSpringGreen">
       More info/contact us
       </font></a></p>
