--- a/game_answers.html
+++ b/game_answers.html
@@ -54,7 +54,7 @@
     <p></p>
     <p></p>
   <p style="text-align:center;">
-    <a href="Native_Plants_Ident_Game.html" target="_self">
+    <a href="game_home.html" target="_self">
       <font color="LightSeaGreen">
       Return to Home
       </font></a></p>
