--- a/contact-us.html
+++ b/contact-us.html
@@ -18,7 +18,7 @@
   <p></p>
   <p></p>
   <p style="text-align:center;">
-    <a href="Native_Plants_Ident_Game.html" target="_self">
+    <a href="game_home.html" target="_self">
       <font color="LightSeaGreen">
       Return to Home
       </font></a></p>
