--- a/game_s1.html
+++ b/game_s1.html
@@ -32,12 +32,13 @@ Let's see...what are they useful for? Oh! You remember:</p>
 berries aren't out yet, check out the paper guide by the entrance to the garden. Once you know what these two plants look like, look at the options below. Which of these
 berries should you pick for your woodland lunch?</p>
 
-<button type="button" onclick="document.getElementById('verifyfalse').style.disply='block'">
-  <img src="bluecohosh.png" alt="Blue Cohosh berries" style="width:401px;height:300px; border:5px solid #000000" class="center"><br>
+<button type="button" onclick="document.getElementById('verifyfalse').style.display='block'">
+  <img src="bluecohosh.png" alt="Blue Cohosh berries" style="width:401px;height:300px;border:5px solid #000000" class="center">
   </button>
-<button type="button" onclick="document.getElementById('verifytrue').style.disply='block'">
-  <img src="americanspikenard.png" alt="American Spikenard berries" style="width:401px;height:300px; border:5px solid #000000" class="center">
+<button type="button" onclick="document.getElementById('verifytrue').style.display='block'">
+  <img src="americanspikenard.png" alt="American Spikenard berries" style="width:401px;height:300px;border:5px solid #000000" class="center">
   </button>
+  
 <p></p>
   
 <p id="verifyfalse" style="display:none">Not quite! Those are Blue Cohosh berries, which are poisonous. Try again.</p>
@@ -46,7 +47,7 @@ berries should you pick for your woodland lunch?</p>
 <p></p>
 <p></p>
 <p style="text-align:center;"><a href="game_s2.html" target="_self"><font color="DarkOrange">
-      Next Scenario (not set up yet)</font></a></p>
+      Next Scenario</font></a></p>
 <p style="text-align:center;"><a href="game_home.html" target="_self"><font color="LightSeaGreen">
       Return to Home</font></a></p>
   
