--- a/game_s1.html
+++ b/game_s1.html
@@ -35,15 +35,15 @@ berries should you pick for your woodland lunch?</p>
 <button type="button" onclick="document.getElementById('verifyfalse').style.display='block';document.getElementById('verifytrue').style.display='none'">
   <img src="bluecohosh.png" alt="Blue Cohosh berries" style="width:401px;height:300px;border:5px solid #000000" class="center">
   </button>
-<br>
+<p></p>
 <button type="button" onclick="document.getElementById('verifytrue').style.display='block';document.getElementById('verifyfalse').style.display='none'">
   <img src="americanspikenard.png" alt="American Spikenard berries" style="width:401px;height:300px;border:5px solid #000000" class="center">
   </button>
   
 <p></p>
   
-<p id="verifyfalse" style="display:none">Not quite! Those are Blue Cohosh berries, which are poisonous. Try again.</p>
-<p id="verifytrue" style="display:none">That's correct! You picked American Spikenard, which has edible berries.</p>
+<p id="verifyfalse" style="display:none;text-align:center">Not quite! Those are Blue Cohosh berries, which are poisonous. Try again.</p>
+<p id="verifytrue" style="display:none;text-align:center">That's correct! You picked American Spikenard, which has edible berries.</p>
 
 <p></p>
 <p></p>
