--- a/game_s1.html
+++ b/game_s1.html
@@ -5,14 +5,6 @@
   <title>Native Plants Game</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
-  <style>
-    .center {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      width: 50%;
-    }
-  </style>
 </head>
 
 <body>
@@ -33,17 +25,16 @@ berries aren't out yet, check out the paper guide by the entrance to the garden.
 berries should you pick for your woodland lunch?</p>
 
 <button type="button" onclick="document.getElementById('verifyfalse').style.display='block';document.getElementById('verifytrue').style.display='none'">
-  <img src="bluecohosh.png" alt="Blue Cohosh berries" style="width:401px;height:300px;border:5px solid #000000" class="center">
+  <img src="bluecohosh.png" alt="Blue Cohosh berries" style="width:401px;height:300px;border:5px solid #000000">
   </button>
-<p></p>
 <button type="button" onclick="document.getElementById('verifytrue').style.display='block';document.getElementById('verifyfalse').style.display='none'">
-  <img src="americanspikenard.png" alt="American Spikenard berries" style="width:401px;height:300px;border:5px solid #000000" class="center">
+  <img src="americanspikenard.png" alt="American Spikenard berries" style="width:401px;height:300px;border:5px solid #000000">
   </button>
   
 <p></p>
   
-<p id="verifyfalse" style="display:none;text-align:center">Not quite! Those are Blue Cohosh berries, which are poisonous. Try again.</p>
-<p id="verifytrue" style="display:none;text-align:center">That's correct! You picked American Spikenard, which has edible berries.</p>
+<p id="verifyfalse" style="display:none;text-align:center"><b>Not quite!</b> Those are Blue Cohosh berries, which are poisonous. Try again.</p>
+<p id="verifytrue" style="display:none;text-align:center"><b>That's correct!</b> You picked American Spikenard, which has edible berries.</p>
 
 <p></p>
 <p></p>
