--- a/game_s1.html
+++ b/game_s1.html
@@ -24,7 +24,7 @@ Let's see...what are they useful for? Oh! You remember:</p>
 berries aren't out yet, check out the paper guide by the entrance to the garden. Once you know what these two plants look like, look at the options below. Which of these
 berries should you pick for your woodland lunch?</p>
 
-<p style="text-align:center">
+<p style="text-align:center;">
   <button type="button" onclick="document.getElementById('verifyfalse').style.display='block';document.getElementById('verifytrue').style.display='none'">
     <img src="bluecohosh.png" alt="Blue Cohosh berries" style="width:401px;height:300px;border:5px solid #000000">
     </button>
@@ -38,8 +38,6 @@ berries should you pick for your woodland lunch?</p>
 <p id="verifyfalse" style="display:none;text-align:center"><b>Not quite!</b> Those are Blue Cohosh berries, which are poisonous. Try again.</p>
 <p id="verifytrue" style="display:none;text-align:center"><b>That's correct!</b> You picked American Spikenard, which has edible berries.</p>
 
-<p></p>
-<p></p>
 <p style="text-align:center;"><a href="game_s2.html" target="_self"><font color="DarkOrange">
       Next Scenario</font></a></p>
 <p style="text-align:center;"><a href="game_home.html" target="_self"><font color="LightSeaGreen">
