--- a/contact-us.html
+++ b/contact-us.html
@@ -8,20 +8,16 @@
 </head>
 
 <body>
-  <h3 style="text-align:center;">More Information</h3>
-  <p style="text-align:center;">This native plant garden is maintained
-    by the BIO/ENS Crew. The beds were planted in 2019(right?), and other
-    areas of the garden are in progress.</p>
-  <p style="text-align:center;">If you have any questions, please email us
-    at crew-bioens-l@warren-wilson.edu. You can also find us on Instagram
-    @wwc_bio_ens.</p>
-  <p></p>
-  <p></p>
-  <p style="text-align:center;">
-    <a href="game_home.html" target="_self">
-      <font color="LightSeaGreen">
-      Return to Home
-      </font></a></p>
+  
+<h3 style="text-align:center;">More Information</h3>
+  
+<p style="text-align:center;">This native plant garden is maintained by the BIO/ENS Crew. The beds were planted in 2019, and other areas of the garden are in progress.</p>
+<p style="text-align:center;">If you have any questions, please email us at crew-bioens-l@warren-wilson.edu. You can also find us on Instagram: @wwc_bio_ens.</p>
+<p></p>
+<p></p>
+<p style="text-align:center;"><a href="game_home.html" target="_self"><font color="LightSeaGreen">
+  Return to Home</font></a></p>
+  
 </body>
 
 </html>
