--- a/game_s2.html
+++ b/game_s2.html
@@ -1,2 +1,44 @@
 <!DOCTYPE html>
-<lang="en"
+<html lang="en">
+
+<head>
+  <title>Native Plants Game</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+</head>
+
+<body>
+  
+<h2 style="text-align:center;">Scenario 2</h2>
+  
+<p style="text-align:center;">~~scenario_text_here~~</p>
+  
+<p style="text-align:center;">
+  <b>plant:</b> description<br>
+  <b>plant:</b> description
+</p>
+  
+<p style="text-align:center;">~~activity_instructions_here~~</p>
+
+<p style="text-align:center;">
+  <button type="button" onclick="document.getElementById('verifyfalse').style.display='block';document.getElementById('verifytrue').style.display='none'">
+    <img src="IMGSRCHERE" alt="ALTHERE" style="width:401px;height:300px;border:5px solid #000000">
+    </button>
+  <button type="button" onclick="document.getElementById('verifytrue').style.display='block';document.getElementById('verifyfalse').style.display='none'">
+    <img src="IMGSRCHERE" alt="ALTHERE" style="width:401px;height:300px;border:5px solid #000000">
+    </button>
+</p>
+  
+<p></p>
+  
+<p id="verifyfalse" style="display:none;text-align:center"><b>Not quite!</b></p>
+<p id="verifytrue" style="display:none;text-align:center"><b>That's correct!</b></p>
+
+<p style="text-align:center;"><a href="game_s2.html" target="_self"><font color="DarkOrange">
+      Next Scenario</font></a></p>
+<p style="text-align:center;"><a href="game_home.html" target="_self"><font color="LightSeaGreen">
+      Return to Home</font></a></p>
+  
+</body>
+
+</html>
