centered with div instead of p

--- a/game_s1.html
+++ b/game_s1.html
@@ -24,14 +24,14 @@ Let's see...what are they useful for? Oh! You remember:</p>
 berries aren't out yet, check out the paper guide by the entrance to the garden. Once you know what these two plants look like, look at the options below. Which of these
 berries should you pick for your woodland lunch?</p>
 
-<p style="text-align:center;">
+<div style="text-align:center;">
   <button type="button" onclick="document.getElementById('verifyfalse').style.display='block';document.getElementById('verifytrue').style.display='none'">
     <img src="bluecohosh.png" alt="Blue Cohosh berries" style="width:401px;height:300px;border:5px solid #000000">
     </button>
   <button type="button" onclick="document.getElementById('verifytrue').style.display='block';document.getElementById('verifyfalse').style.display='none'">
     <img src="americanspikenard.png" alt="American Spikenard berries" style="width:401px;height:300px;border:5px solid #000000">
     </button>
-</p>
+</div>
   
 <p></p>
   
