--- a/game_s1.html
+++ b/game_s1.html
@@ -9,7 +9,7 @@
     h2 {text-align: center;}
     p {text-align: center;}
     div {text-align: center;}
-    img {width=100%}
+    img {width: 100%}
   </style}
 </head>
 
