--- a/game_s1.html
+++ b/game_s1.html
@@ -40,8 +40,8 @@ berries should you pick for your woodland lunch?</p>
   
 <p></p>
   
-<p id="verifyfalse" style="display:none;><b>Not quite!</b> Those are Blue Cohosh berries, which are poisonous. Try again.</p>
-<p id="verifytrue" style="display:none;><b>That's correct!</b> You picked American Spikenard, which has edible berries.</p>
+<p id="verifyfalse" style="display:none;"><b>Not quite!</b> Those are Blue Cohosh berries, which are poisonous. Try again.</p>
+<p id="verifytrue" style="display:none;"><b>That's correct!</b> You picked American Spikenard, which has edible berries.</p>
 
 <p><a href="game_s2.html" target="_self"><font color="DarkOrange">
       Next Scenario</font></a></p>
