removing style centering...again...

--- a/game_s1.html
+++ b/game_s1.html
@@ -5,16 +5,11 @@
   <title>Native Plants Game</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
-  <style>
-    h2 {text-align: center;}
-    p {text-align: center;}
-    div {text-align: center;}
-  </style}
 </head>
 
 <body>
   
-<h2>Scenario 1</h2>
+<h2 style="text-align:center;">Scenario 1</h2>
   
 <p>Oh no! You're out for a walk and just realized you forgot your lunch! Luckily, you recognize a couple of the plants that grow around here.
 Let's see...what are they useful for? Oh! You remember:</p>
