--- a/game_s1.html
+++ b/game_s1.html
@@ -26,10 +26,10 @@ berries should you pick for your woodland lunch?</p>
 
 <div style="text-align:center;">
   <button type="button" onclick="document.getElementById('verifyfalse').style.display='block';document.getElementById('verifytrue').style.display='none'">
-    <img src="bluecohosh.png" alt="Blue Cohosh berries" style="width:40%;height:30%;border:5px solid #000000">
+    <img src="bluecohosh.png" alt="Blue Cohosh berries" style="width:401;height:300;border:5px solid #000000">
     </button>
   <button type="button" onclick="document.getElementById('verifytrue').style.display='block';document.getElementById('verifyfalse').style.display='none'">
-    <img src="americanspikenard.png" alt="American Spikenard berries" style="width:40%;height:30%;border:5px solid #000000">
+    <img src="americanspikenard.png" alt="American Spikenard berries" style="width:401;height:300;border:5px solid #000000">
     </button>
 </div>
   
