added style class for buttons

--- a/game_s1.html
+++ b/game_s1.html
@@ -5,6 +5,13 @@
   <title>Native Plants Game</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
+  <style>
+    .button {
+      border: none;
+      padding: none;
+      display: inline-block;
+    }
+  </style
 </head>
 
 <body>
@@ -25,10 +32,10 @@ berries aren't out yet, check out the paper guide by the entrance to the garden.
 berries should you pick for your woodland lunch?</p>
 
 <div style="text-align:center;">
-  <button type="button" onclick="document.getElementById('verifyfalse').style.display='block';document.getElementById('verifytrue').style.display='none'">
+  <button type="button" class="button" onclick="document.getElementById('verifyfalse').style.display='block';document.getElementById('verifytrue').style.display='none'">
     <img src="bluecohosh.png" alt="Blue Cohosh berries" style="width:401px;height:300px;border:5px solid #000000">
     </button>
-  <button type="button" onclick="document.getElementById('verifytrue').style.display='block';document.getElementById('verifyfalse').style.display='none'">
+  <button type="button" class="button" onclick="document.getElementById('verifytrue').style.display='block';document.getElementById('verifyfalse').style.display='none'">
     <img src="americanspikenard.png" alt="American Spikenard berries" style="width:401px;height:300px;border:5px solid #000000">
     </button>
 </div>
