--- a/game_s1.html
+++ b/game_s1.html
@@ -8,7 +8,7 @@
   <style>
     .button {
       border: none;
-      padding: none;
+      padding: 0px 0px;
       display: inline-block;
     }
   </style
@@ -42,8 +42,8 @@ berries should you pick for your woodland lunch?</p>
   
 <p></p>
   
-<p id="verifyfalse" style="display:none;style="text-align:center;"><b>Not quite!</b> Those are Blue Cohosh berries, which are poisonous. Try again.</p>
-<p id="verifytrue" style="display:none;style="text-align:center;"><b>That's correct!</b> You picked American Spikenard, which has edible berries.</p>
+<p id="verifyfalse" style="display:none;text-align:center;"><b>Not quite!</b> Those are Blue Cohosh berries, which are poisonous. Try again.</p>
+<p id="verifytrue" style="display:none;text-align:center;"><b>That's correct!</b> You picked American Spikenard, which has edible berries.</p>
 
 <p style="text-align:center;"><a href="game_s2.html" target="_self"><font color="DarkOrange">
       Next Scenario</font></a></p>
