--- a/game_s1.html
+++ b/game_s1.html
@@ -10,7 +10,7 @@
       border: none;
       padding: 0px 0px;
       display: inline-block;
-      margin: 0px 0px;
+      margin: 0px 10px;
     }
   </style
 </head>
@@ -34,10 +34,10 @@ berries should you pick for your woodland lunch?</p>
 
 <div style="text-align:center;">
   <button type="button" class="button" onclick="document.getElementById('verifyfalse').style.display='block';document.getElementById('verifytrue').style.display='none'">
-    <img src="bluecohosh.png" alt="Blue Cohosh berries" style="width:401px;height:300px;border:5px solid #000000">
+    <img src="bluecohosh.png" alt="Blue Cohosh berries" style="width:401px;height:300px;">
     </button>
   <button type="button" class="button" onclick="document.getElementById('verifytrue').style.display='block';document.getElementById('verifyfalse').style.display='none'">
-    <img src="americanspikenard.png" alt="American Spikenard berries" style="width:401px;height:300px;border:5px solid #000000">
+    <img src="americanspikenard.png" alt="American Spikenard berries" style="width:401px;height:300px;">
     </button>
 </div>
   
