--- a/game_s1.html
+++ b/game_s1.html
@@ -34,10 +34,10 @@ berries should you pick for your woodland lunch?</p>
 
 <div style="text-align:center;">
   <button type="button" class="button" onclick="document.getElementById('verifyfalse').style.display='block';document.getElementById('verifytrue').style.display='none'">
-    <img src="bluecohosh.png" alt="Blue Cohosh berries" style="width:401px;height:300px;">
+    <img src="bluecohosh.png" alt="Blue Cohosh berries" style="width:401px;height:300px;border:2px solid black">
     </button>
   <button type="button" class="button" onclick="document.getElementById('verifytrue').style.display='block';document.getElementById('verifyfalse').style.display='none'">
-    <img src="americanspikenard.png" alt="American Spikenard berries" style="width:401px;height:300px;">
+    <img src="americanspikenard.png" alt="American Spikenard berries" style="width:401px;height:300px;border:2x solid black">
     </button>
 </div>
   
