--- a/game_s1.html
+++ b/game_s1.html
@@ -8,9 +8,9 @@
   <style>
     .button {
       border: none;
-      padding: none;
+      padding: 0px 0px;
       display: inline-block;
-      margin: none;
+      margin: 10px 10px;
     }
   </style
 </head>
@@ -34,10 +34,10 @@ berries should you pick for your woodland lunch?</p>
 
 <div style="text-align:center;">
   <button type="button" class="button" onclick="document.getElementById('verifyfalse').style.display='block';document.getElementById('verifytrue').style.display='none'">
-    <img src="bluecohosh.png" alt="Blue Cohosh berries" style="width:401px;height:300px;border:2px #000000">
+    <img src="bluecohosh.png" alt="Blue Cohosh berries" style="width:401px;height:300px;border:2px solid black">
     </button>
   <button type="button" class="button" onclick="document.getElementById('verifytrue').style.display='block';document.getElementById('verifyfalse').style.display='none'">
-    <img src="americanspikenard.png" alt="American Spikenard berries" style="width:401px;height:300px;border:2px #000000">
+    <img src="americanspikenard.png" alt="American Spikenard berries" style="width:401px;height:300px;border:2px solid black">
     </button>
 </div>
   
