added line-height to meta style

--- a/game_s1.html
+++ b/game_s1.html
@@ -11,6 +11,7 @@
       padding: 0px 0px;
       display: inline-block;
       margin: 10px 10px;
+      line-height: 80%;
     }
   </style
 </head>
