vertical align: middle

--- a/game_s1.html
+++ b/game_s1.html
@@ -12,6 +12,7 @@
       display: inline-block;
       margin: 10px 10px;
       line-height: 80%;
+      vertical-align: middle;
     }
   </style
 </head>
