--- a/game_s1.html
+++ b/game_s1.html
@@ -39,7 +39,7 @@ berries should you pick for your woodland lunch?</p>
     <img src="bluecohosh.png" alt="Blue Cohosh berries" style="width:401px;height:300px;border:1px solid black">
     </button>
   <button type="button" class="button" onclick="document.getElementById('verifytrue').style.display='block';document.getElementById('verifyfalse').style.display='none'">
-    <img src="americanspikenard.png" alt="American Spikenard berries" style="width:401px;height:300px;border:2px solid black">
+    <img src="americanspikenard.png" alt="American Spikenard berries" style="width:401px;height:300px;border:2px transparent">
     </button>
 </div>
   
