--- a/game_s1.html
+++ b/game_s1.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Native Plants Game</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <meta charset="UTF-8">
   <style>
     .button {
