--- a/game_s1.html
+++ b/game_s1.html
@@ -8,7 +8,7 @@
   <style>
     .button {
       border: none;
-      padding: 0px 0px;
+      padding: 0px 0px 0px 0px;
       display: inline-block;
       margin: 10px 10px;
       line-height: 80%;
