--- a/game_s1.html
+++ b/game_s1.html
@@ -35,7 +35,8 @@ berries aren't out yet, check out the paper guide by the entrance to the garden.
 berries should you pick for your woodland lunch?</p>
 
 <div style="text-align:center;">
-  <button type="button" class="button" onclick="document.getElementById('verifyfalse').style.display='block';document.getElementById('verifytrue').style.display='none'">
+  <button type="button" class="button" onclick="document.getElementById('verifyfalse').style.display='block';document.getElementById('verifytrue').style.display='none'"
+  style="width:403px;height:302px">
     <img src="bluecohosh.png" alt="Blue Cohosh berries" style="width:75.5%;height:76.9%;border:1px solid black">
     </button>
   <button type="button" class="button" onclick="document.getElementById('verifytrue').style.display='block';document.getElementById('verifyfalse').style.display='none'">
