--- a/game_s1.html
+++ b/game_s1.html
@@ -36,7 +36,7 @@ berries should you pick for your woodland lunch?</p>
 
 <div style="text-align:center;">
   <button type="button" class="button" onclick="document.getElementById('verifyfalse').style.display='block';document.getElementById('verifytrue').style.display='none'">
-    <img src="bluecohosh.png" alt="Blue Cohosh berries" style="width:100%;height:100%;border:1px solid black">
+    <img src="bluecohoshnew.png" alt="Blue Cohosh berries" style="width:100%;height:100%;border:2px solid black">
     </button>
   <button type="button" class="button" onclick="document.getElementById('verifytrue').style.display='block';document.getElementById('verifyfalse').style.display='none'">
     <img src="americanspikenard.png" alt="American Spikenard berries" style="width:100%;height:100%;border:2px transparent">
