--- a/game_home.html
+++ b/game_home.html
@@ -12,14 +12,7 @@
   <h1 style="text-align:center;">Native Plants Identification Game</h1>
   <p></p>
   <p>INSTRUCTIONS</p>
-  <p>Hopefully more will be added later on, for now I am just worrying
-    about getting the first thing set up. So current instructions are
-    more or less to follow the instructions as you go through the
-    narrative - Pretend you are in these scenarios and make sure to
-    pay attention to the garden around you! (Also so that it isn't
-    seasonally dependent, some kind of brochure or info sheet that
-    people could look at when the plants aren't out yet would be also
-    handy to be able to tell them to reference here.)</p>
+  <p>~~INSTRUCTIONS HERE~~</p>
   <p></p>
   <p style="text-align:center;">
     <a href="game_s1.html" target="_self">
